schemas/Core Banking and Money Laundering/v1.0.0/liquid_accts_people.md
| Excel Column   | Field Name                                        | Sample Value                 | Comment 1                                                                                                                                                                                                                                                                                                | Comment 2   | In Kaggle   |    |
|:---------------|:--------------------------------------------------|:-----------------------------|:---------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------|:------------|:------------|:-------------|
| A              | Financial_Institution_Name                        | PQR Bank                     | All major US banks supported including JP Morgan Chase, Bank of America, Wells Fargo, Citi, Capital One Financial, U.S. Bank, PNC Financial Services, Bank of New York Mellon, BB&T, SunTrust Bank, Key Bank, Regions Financial, M&T Bank, Citizens Bank, State Street Bank, Ally Financial, Fifth Third |             | No          |              |
| B              | Financial_Institution_ID                          | 10A3D12D0                    | Same ID in "bank_xfers.csv"                                                                                                                                                                                                                                                                              |             | No          |              |
| C              | Branch                                            | 10C061C30                    |                                                                                                                                                                                                                                                                                                          |             | No          |              |
| D              | Account_Country                                   | United States                | Owner is a person, not a company.  For a personal account "Person" is the only option for this "Entity Type" field                                                                                                                                                                                       |             | No          | Person       |
| E              | Account_Currency                                  | USD                          | "Account Currency" typically matches this value - but not always.  USD = US Dollars.  Value typically matches "Account Country"                                                                                                                                                                          |             | No          |              |
| F              | Entity_Type                                       | Person                       | (Not a company)                                                                                                                                                                                                                                                                                          |             | No          |              |
| G              | Entity_ID                                         | 179                          | Same index as in "users.csv"                                                                                                                                                                                                                                                                             |             | No          |              |
| H              | Entity_Name                                       | Cayson Hayes                 | Same name as in "users.csv"                                                                                                                                                                                                                                                                              |             | No          |              |
| I              | Does_Account_Have_Debit_Card                      | 1                            | 1 --> There is a debit card.  0 --> No debit card.                                                                                                                                                                                                                                                       |             | No          |              |
| J              | DebitCard_Index_in_EntityCards                    | 2                            | The credit and debit cards held by each entity are numbered 0, 1, 2, 3, … to distinguish among all cards held by the entity.  This index indicates the index among all cards of entity where this debit card sits.                                                                                       |             | No          |              |
| K              | Controlled_by_Criminal                            | 0                            | 0 -> Not controlled by Criminal, 1 -> Controlled by Criminal                                                                                                                                                                                                                                             |             | No          |              |
| L              | MCC                                               | MCC = Merchant Category Code | Field applies only to companies, not people                                                                                                                                                                                                                                                              |             | No          |              |
| M              | Account_Type                                      | Checking                     | Account types include:; Cash; Checking Account; Savings Account; Money Market Account; Crypto Currency; CD:  Certificate of Deposit; Bond; Mutual Fund; Stock; Stock Options; 401k; IRA; Life Insurance                                                                                                  |             | No          |              |
| N              | Account_ID                                        | 3020009543                   |                                                                                                                                                                                                                                                                                                          |             | No          |              |
| O              | Max_Overdraft                                     | 50                           | In "Account Currency"                                                                                                                                                                                                                                                                                    |             | No          |              |
|                |                                                   |                              |                                                                                                                                                                                                                                                                                                          |             |             |              |
| NOTE:          | Format is same as in "liquid_accts_companies.csv" |                              |                                                                                                                                                                                                                                                                                                          |             |             |              |
